--- a/css/tasks.css
+++ b/css/tasks.css
@@ -1,7 +1,7 @@
 .datentime{
     width: 100%; 
     height: 50px; 
-    background-color: skyblue; 
+    background-color: rgb(108, 193, 227); 
     border-radius: 10px 10px 0px 0px; 
     padding: 15px 5px 0px 10px;
 }
@@ -21,15 +21,15 @@
     width: 100%; 
     min-height: 30px; 
     margin-bottom: 20px; 
-    background-color: rgb(91, 169, 200); 
+    background-color: #a8e7f5; 
     border-radius: 0px 0px 10px 10px; 
     padding: 15px 5px 35px 10px; 
     overflow-wrap: break-word;
 }
 
 .delete{
-    width: 30px; 
-    height: 30px; 
+    width: 20px; 
+    height: 20px; 
     z-index: 1000; 
     float: right; 
     cursor: pointer;
